# arc

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
src/: App.tsx  bootstrap.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/settings/: crypto-settings-panel.tsx  settings-section.tsx  settings-skeleton.tsx  symbol-combobox.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  number-input.tsx  popover.tsx  select.tsx  skeleton.tsx  switch.tsx  textarea.tsx  toggle-group.tsx  toggle.tsx
src/core/: constants.ts  liveFeed.ts  settingsStore.ts  theme.ts  trayController.ts  types.ts  useAppState.ts  useWidgetLifecycle.ts  widgetCatalog.ts  widgetManager.ts  widgetRegistry.ts  workspaceHost.ts
src/feeds/: coins.ts  cryptoFeed.ts  weatherFeed.ts
src/feeds/crypto/: cryptoFeed.ts  defaults.ts  fetchTickers.ts  icons.ts  symbols.ts  types.ts
src/hooks/: use-live-feed.ts
src/lib/: dates.ts  utils.ts
src/settings/: settings-app.tsx
src/shell/: widget-shell.tsx
src/widgets/calendar/: calendar-widget.tsx
src/widgets/clock/: clock-widget.tsx
src/widgets/crypto/: crypto-icon.tsx  crypto-widget.tsx
src/widgets/notes/: notes-widget.tsx
src/widgets/pomodoro/: pomodoro-widget.tsx
(+5 files in other folders)
